--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -34,7 +34,7 @@
 }
 .headingone,.headingtwo{
     font-size: 6rem;
-    animation-duration: 1.4s;
+    animation-duration: 2.4s;
     animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
     
 }
@@ -50,6 +50,7 @@ animation-name: movetoright;
 .btn{
     background-color: purple;
     border: 1px solid purple;
+    text-decoration: none;
     color: white;
     border-radius: 4px;
     width: 30%;
@@ -60,6 +61,10 @@ animation-name: movetoright;
 }
 .btn:hover{
     box-shadow: 0px 0px 10px white,
+}
+.btn a{
+    text-decoration: none;
+    color: white;
 }
 @keyframes movetoleft {
     0%{
