--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,9 +1,11 @@
+
 .about{
     display: flex;
     margin-left: auto;
     margin-right: auto;
     flex-direction: column;
     align-items: center;
+    width: 1300px;
 }
 .about h2{
 color: white;
@@ -30,13 +32,27 @@ position: relative;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    left: -300px;
+    transform: translateX(-300px);
+    transition: transform 1.2s;
 
+}
+.fadein{
+    transform: translateX(0);
+}
+.profilepics{
+    margin-bottom: 1rem;
+}
+.profilepic{
+    display: block;
+   margin: auto;
 }
 .profilecontent{
     width: 500px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     line-height: 1.8;
     color: white;
+    
 }
 .skills{
     display: flex;
@@ -46,22 +62,22 @@ position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 25px;
 }
+
 
 
 .skills__item:not(:last-child) {
     margin-bottom: 3rem;
 }
-.skills__item-fade-in {
-    opacity: 1;
-}
+
 .skills__item {
-    opacity: 1;
+    opacity: 0;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content:space-evenly;
     height: 100px;
     width: 160px;
     border: double 3px transparent;
@@ -71,14 +87,20 @@ position: relative;
     border-radius: 10px;
     background-origin: border-box;
     background-clip: content-box, border-box;
-    transition: transform 0.2s, opacity 1.2s;
-    overflow: hidden;}
-    .skills__item img{
+    overflow: hidden;
+    transition:transform 0.3s, opacity 1.2s;
+   
+}
+.fadeto{
+    opacity: 1;
+}
+ .skills__item img{
         overflow: clip;
         height: 60%;
-        width: 40%;
+        width: auto;
+        transition: all 0.3s;
     }
-    .skillname{
+ .skillname{
         color: white;
         font-size: 1.4rem;
         font-weight: 600px;
@@ -86,15 +108,21 @@ position: relative;
         letter-spacing: 1px;
     }
 
+    .rounded{
+        border-radius: 44%;
+    }
+
 @media (max-width: 1000px) {
     .skills__item {
         height: 80px;
         width: 130px;
     }
+    .content{
+        flex-direction: column;
+    }
 }
 @media (max-width: 1300px) {
     .skills__item {
-        opacity: 0;
         border-width: 2px;
     }
 }
