--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ body {
 code {
 font-family: montserrat, sans-serif;
 }
+*::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
