--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -27,7 +27,7 @@
     margin-right: auto;
     color: white;
     font-weight: 300;
-    font-family:'popins';
+    font-family:'Roboto';
     z-index: 999;
     box-sizing: inherit;
 
@@ -45,7 +45,7 @@
 animation-name: movetoright;
 }
 .name{
-    color: purple;
+    color:rgb(238, 131, 246);
 }
 .btn{
     background-color: purple;
@@ -58,6 +58,7 @@ animation-name: movetoright;
     margin-top: 15px;
     font-size: 1rem;
     cursor: pointer;
+    box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.2);
 }
 .btn:hover{
     box-shadow: 0px 0px 10px white,
@@ -84,5 +85,18 @@ animation-name: movetoright;
     100%{
         opacity: 1;
         transform: translateX(0);
+    }
+}
+@media(max-width: 1000px){
+    .headingone,.headingtwo{
+        font-size: 3rem;
+    }
+    .name{
+        color:rgb(238, 131, 246);
+    }
+    .btn{
+        background-color:transparent;
+        border: 5px solid rgb(238, 131, 246);
+        box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.2);
     }
 }
