--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -121,7 +121,7 @@ margin-top: 10rem;
       
     }
     .profile{
-        transform: translateX(0);
+        transform: translateX(1rem);
         margin-bottom: 3rem;
       
     }
