add some changes

--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -45,7 +45,7 @@
 animation-name: movetoright;
 }
 .name{
-    color:rgb(238, 131, 246);
+    color:#C738BD;
 }
 .btn{
     background-color: purple;
