--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -37,7 +37,7 @@ margin-left: 11rem;
     height:28rem;
     width: 60rem;
     position: relative;
-    background-color: #C738BD;
+    background-color: #4F1787;
     cursor: pointer;
     transform: scale(100%);
     transition: all 0.2s;
@@ -49,7 +49,7 @@ margin-left: 11rem;
 transform: scale(95%);
 }
 .image{
-    width: 85%;
+    width: 95%;
     position: relative;
 }
 .image img{
@@ -57,7 +57,7 @@ transform: scale(95%);
 }
 .info{
     position: relative;
-    left: -8rem;
+    left: -9rem;
     margin-right: -2rem;
     color: white;
     font-family: "Roboto";
@@ -66,6 +66,7 @@ transform: scale(95%);
     padding: 1rem;
     z-index: 999;
     height: fit-content;
+
 }
 .title{
     font-size: 2.5rem
@@ -79,12 +80,30 @@ transform: scale(95%);
 .info a{
     text-decoration: none;
     color: white;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid ;
-    padding: 1rem;
-
 }
-.info a:hover{
-    border: 1px solid white;
 
+.live1{
+display: flex;
+background-color: transparent;
+flex-direction: column;
+justify-content: center;
+letter-spacing: 3px;
+font-size: 1.2rem;
+padding: 1rem 1.2rem;
+position: relative;
+line-height: 1;
+text-transform: uppercase;
+align-items: center;
+width: 13rem;
+}
+.live1::before{
+    content: "";
+    position: absolute;
+    border-bottom: 2px solid purple;
+    width: 7rem;
+    top:2.5rem
+}
+.live1:hover{
+background-color: purple;
+transition: all 0.2s;
 }
