--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -85,7 +85,7 @@ margin-top: 10rem;
     border: double 3px transparent;
     border-image-slice: 1;
     border-width: 3px;
-    background-image: linear-gradient(#1a1a1a, #1a1a1a), radial-gradient(circle at top left, #51a2e9, #ff4d5a);
+    background-image: linear-gradient(#1a1a1a, #1a1a1a), radial-gradient(circle at top left, #51a2e9, purple);
     border-radius: 10px;
     background-origin: border-box;
     background-clip: content-box, border-box;
