--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -78,3 +78,11 @@ color: #E3A5C7;
 .er{
     border-left: 2px solid #E3A5C7;
 }
+@media(max-width: 1000px){
+    .description{
+        font-size: 1rem;
+    }
+    .form{
+        width: 50%;
+    }
+}
