--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -65,11 +65,14 @@ animation-name: movetoright;
     box-shadow: 0px 0px 10px white;
     color:white
 }
-.btn a{
+.header a{
     text-decoration: none;
     color: white;
+    width: 100%;
+    display: block;
+    text-align: center;
 }
-.btn a:hover{
+.header a:hover{
     color: white;
 }
 @keyframes movetoleft {
