--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -95,7 +95,7 @@ animation-name: movetoright;
         transform: translateX(0);
     }
 }
-@media(max-width: 1000px){
+@media(max-width: 1024px){
     .headingone,.headingtwo{
         font-size: 3rem;
     }
@@ -106,5 +106,33 @@ animation-name: movetoright;
         background-color:transparent;
         border: 2px solid #E3A5C7;
         box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.2);
+    }
+}
+@media(max-width: 768px){
+    .headingone,.headingtwo{
+        font-size: 2.2rem;
+    }
+    .name{
+        color:#E3A5C7;
+    }
+    .btn{
+        background-color:transparent;
+        border: 2px solid #E3A5C7;
+        box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.2);
+        width: 50%;
+    }
+}
+@media(max-width: 420px){
+    .headingone,.headingtwo{
+        font-size: 2rem;
+    }
+    .name{
+        color:#E3A5C7;
+    }
+    .btn{
+        background-color:transparent;
+        border: 2px solid #E3A5C7;
+        box-shadow: 5px 5px 5px 5px rgba(0,0,0,0.2);
+        width: 50%;
     }
 }
