make project section responsive

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -47,6 +47,7 @@ a:hover{
 @media(max-width: 768px){
     .navigationbar{
         justify-content: center;
+        height: 4rem;
       
     }
     .navItems{
