--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+   
 }
 .head {
         color: white;
@@ -20,12 +21,7 @@
     right: 0;
     z-index: -1;
 }
-.contents{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+
 .content{
 display: flex;
 position: relative;
@@ -157,9 +153,20 @@ color: inherit;
 color: #1a1a1a;
 }
 @media (max-width: 1024px) {
+    .head {
+        font-size: 2rem;
+        margin-top: 6rem;
+      }
+    
+      .head::before {
+        width: 7rem;
+        left: 2rem;
+        top: 1.75rem;
+      }
 
     .content {
-        margin-bottom: 5rem;
+        margin-bottom: 7rem;
+      
     }
 
     .title {
@@ -174,22 +181,28 @@ color: #1a1a1a;
 
     .pic,.pic2{
         height:30rem;
-        width: 40rem;
+        max-width: 35rem;
        
     }
     .left{
         margin-left: 0rem;
+    
     }
     .right{
         margin-right: 0rem;
         
     }
     .image,.image2{
-        height: 20rem;
+        height: 27rem;
+        width: 100%;
     }
+  
     .info,.info2{
         top:3rem;
-    
+        background-color: rgba(0, 0, 0, 0.4);
+        top: 2rem;
+        height: 23rem;
+        width: auto;
     }
     .live1{
     font-size: 1rem;
@@ -207,24 +220,78 @@ color: #1a1a1a;
     }
 }
 @media(max-width:768px){
-    .info,.info2{
-        background-color: rgba(0, 0, 0,0.25);
-        top: 3rem;
-        height: 23rem;
-    }
-    .info{
-        left: -7.3rem;
-        margin-right: -2rem;
-    }
-    .info2{
-        right:-9.3rem;
-        margin-left: -2rem;
-    }
-    .pic,.pic2{
-        height:30rem;
-        width: 40rem;
-        margin: 0;
-        padding: 0;
+  
+    .content {
+        margin-bottom: 5rem;
+        justify-content: space-between;
        
     }
+    .info,.info2{
+        background-color: rgba(0, 0, 0, 0.6);
+        top: 2rem;
+        height: 23rem;
+        width: auto;
+    }
+    .info{
+        left: -4rem;
+        margin-right: -4rem;
+       
+    }
+    .info2{
+        right:-5.3rem;
+        margin-left: -4rem;
+    }
+    .pic,.pic2{
+        height:23rem;
+        max-width: 35rem;
+        width: 100%;
+    }
+
+    .title {
+        font-size: 1.5rem;
+    }
+
+    .descriptions{
+        font-size: 0.9rem;
+        width: 200px;
+        z-index: 999909999;
+        position: relative;
+    }
+    .live1{
+        font-size: 0.8rem;
+        padding:0.5rem;
+        margin-bottom: 1rem;
+        left: 0;
+        }
+}
+@media(max-width:468px){
+    .pic,.pic2{
+        height:15rem;
+        max-width: 35rem;
+        width: 100%;
+    }
+    .info,.info2{
+        width: 160px;
+        height: 15rem;
+        top: 1rem;
+    
+    }
+    .title {
+        font-size: 1rem;
+    }
+
+    .descriptions{
+        font-size: 0.7rem;
+        font-weight: 500;
+        width: 130px;
+        z-index: 999909999;
+        position: relative;
+    }
+    .live1{
+        font-size: 0.5rem;
+        padding:0.5rem;
+        margin-bottom: 1rem;
+        width: 6rem;
+        left: 0;
+        }
 }
