--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -105,7 +105,7 @@ margin-top: 10rem;
  .skillname{
         color: white;
         font-size: 1.4rem;
-        font-weight: 600px;
+        font-weight: 600;
         line-height: 1;
         letter-spacing: 1px;
     }
@@ -121,7 +121,7 @@ margin-top: 10rem;
     }
     .header {
         font-size: 2rem;
-        margin-top: 6rem;
+        margin-top: 4rem;
         margin-bottom: 6rem;
     }
     .header::before {
@@ -139,7 +139,6 @@ margin-top: 10rem;
     }
     .profilecontent {
         width: 100%; 
-        text-align: center;
         font-size: 1rem;
         line-height: 1.5;
     }
@@ -147,6 +146,7 @@ margin-top: 10rem;
         height: 80px;
         width: 130px;
         margin-bottom: 2rem;
+        border-width: 2px;
     }
     .skillname {
         font-size: 1.2rem;
