working on scrolling problem

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -96,7 +96,8 @@ color: #E3A5C7;
       }
     .description {
         font-size: 0.9rem;
-        width: 50%;
+        width: 100%;
+        text-align: center;
       }
     
       .inpt, .message {
